--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "chart.js": "^2.9.4",
     "cra-template": "1.1.0",
     "react": "^16.12.0",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.12.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
